hard-gists/1c160c9eee91fd44c587/run.log
=== Docker Run Log for 1c160c9eee91fd44c587 ===
Started at: Mi 29. Okt 12:42:50 CET 2025

[2025-10-29 12:42:51] START: Running container for 1c160c9eee91fd44c587
[2025-10-29 12:42:51] SUCCESS: Container 18b5088d063b694c230b2eed75ada04e0b40109014ebb114bd6d00cf5c954556 started for 1c160c9eee91fd44c587
=== Container logs for 1c160c9eee91fd44c587 ===
  File "/snippet.py", line 18
    print vimba.getVersion()
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1c160c9eee91fd44c587 ===
[2025-10-29 12:42:53] INFO: Container 18b5088d063b694c230b2eed75ada04e0b40109014ebb114bd6d00cf5c954556 has stopped
